[gd_scene load_steps=21 format=2]

[ext_resource path="res://Scripts/card_level.gd" type="Script" id=1]
[ext_resource path="res://Sprites/General/blueDot.png" type="Texture" id=2]
[ext_resource path="res://fonts/newfont2 copy.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Sprites/hud/GameToken_1_1.png" type="Texture" id=4]
[ext_resource path="res://Sprites/General/basic tile.png" type="Texture" id=5]
[ext_resource path="res://Sprites/UI/Untitled_Artwork 2.png" type="Texture" id=6]
[ext_resource path="res://Sprites/tiles/basic/gridrpgWall.png" type="Texture" id=7]
[ext_resource path="res://Sprites/hud/hud_full.png" type="Texture" id=8]
[ext_resource path="res://Sprites/UI/forest backdrop.png" type="Texture" id=9]
[ext_resource path="res://Scripts/uibar.gd" type="Script" id=10]
[ext_resource path="res://Sprites/General/health behind.png" type="Texture" id=11]
[ext_resource path="res://Sprites/General/health bar.png" type="Texture" id=12]
[ext_resource path="res://Sprites/General/stamina bar.png" type="Texture" id=13]
[ext_resource path="res://Sprites/General/stamina behind.png" type="Texture" id=14]
[ext_resource path="res://Sprites/hud/card area.png" type="Texture" id=15]
[ext_resource path="res://Sprites/hud/sun icon.png" type="Texture" id=16]
[ext_resource path="res://Sprites/hud/sun glow.png" type="Texture" id=17]
[ext_resource path="res://Sprites/UI/white backdrop.png" type="Texture" id=18]

[sub_resource type="DynamicFont" id=1]
size = 25
font_data = ExtResource( 3 )

[sub_resource type="Animation" id=2]
resource_name = "sun_anim"
length = 4.0
loop = true
tracks/0/type = "bezier"
tracks/0/path = NodePath("sun:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 960, -0.25, 0, 0.25, 0, 960, -0.25, 0, 0.25, 0, 960, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1.4, 3 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("sun:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 544, -0.25, 0, 0.25, 0, 528, -0.25, 0, 0.25, 0, 544, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1.4, 3 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("sun:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, -0.5, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1.4, 2.5, 3.6 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("Sprite3:position:x")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 1160, -0.25, 0, 0.25, 0, 1168, -0.25, 0, 0.25, 0, 1160, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1.4, 3 )
}
tracks/4/type = "bezier"
tracks/4/path = NodePath("Sprite3:position:y")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray( 488, -0.25, 0, 0.25, 0, 480, -0.25, 0, 0.25, 0, 488, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1.4, 3 )
}
tracks/5/type = "bezier"
tracks/5/path = NodePath("Sprite4:position:x")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"points": PoolRealArray( 1168, -0.25, 0, 0.25, 0, 1168, -0.25, 0, 0.25, 0, 1168, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1.4, 3 )
}
tracks/6/type = "bezier"
tracks/6/path = NodePath("Sprite4:position:y")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"points": PoolRealArray( 456, -0.25, 0, 0.25, 0, 440, -0.25, 0, 0.25, 0, 456, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1.4, 3 )
}
tracks/7/type = "bezier"
tracks/7/path = NodePath("Sprite5:position:x")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"points": PoolRealArray( 1176, -0.25, 0, 0.25, 0, 1192, -0.25, 0, 0.25, 0, 1176, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1.4, 3 )
}
tracks/8/type = "bezier"
tracks/8/path = NodePath("Sprite5:position:y")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"points": PoolRealArray( 448, -0.25, 0, 0.25, 0, 432, -0.25, 0, 0.25, 0, 448, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1.4, 3 )
}
tracks/9/type = "bezier"
tracks/9/path = NodePath("Sprite4:rotation_degrees")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1.4, 3 )
}
tracks/10/type = "bezier"
tracks/10/path = NodePath("sun:scale:x")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1.02, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.9, 2.3, 3.6 )
}
tracks/11/type = "bezier"
tracks/11/path = NodePath("sun:scale:y")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1.01, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.9, 2.3, 3.6 )
}

[node name="level" type="Node2D"]
script = ExtResource( 1 )

[node name="background_imgs" type="Node2D" parent="."]
z_index = -100

[node name="alert" type="Sprite" parent="background_imgs"]
position = Vector2( 960, 532 )
scale = Vector2( 2, 2 )
texture = ExtResource( 18 )

[node name="Sprite3" type="Sprite" parent="background_imgs"]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( 1028, 668 )
scale = Vector2( 1.62083, 0.733333 )
texture = ExtResource( 9 )

[node name="Sprite4" type="Sprite" parent="background_imgs"]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( -664, 848 )
scale = Vector2( 1.62083, 0.733333 )
texture = ExtResource( 9 )

[node name="Sprite5" type="Sprite" parent="background_imgs"]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( 2560, 952 )
scale = Vector2( 1.62083, 0.733333 )
texture = ExtResource( 9 )

[node name="Sprite6" type="Sprite" parent="background_imgs"]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( 3472, 344 )
scale = Vector2( 1.62083, 0.733333 )
texture = ExtResource( 9 )

[node name="Sprite7" type="Sprite" parent="background_imgs"]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( -1552, 168 )
scale = Vector2( 1.62083, 0.733333 )
texture = ExtResource( 9 )

[node name="Sprite" type="Sprite" parent="background_imgs"]
position = Vector2( 960, 544 )
scale = Vector2( 0.983333, 0.962963 )
texture = ExtResource( 9 )

[node name="Sprite2" type="Sprite" parent="background_imgs"]
position = Vector2( 960, 568 )
scale = Vector2( 1.01, 0.95 )
texture = ExtResource( 15 )

[node name="tableau_container" type="Node2D" parent="."]
position = Vector2( -968, -64 )

[node name="player_tableau" type="Sprite" parent="tableau_container"]
visible = false
modulate = Color( 0.784314, 1, 0.784314, 1 )
position = Vector2( 1552, 672 )
scale = Vector2( 1.1, 2.2 )
z_index = -1
texture = ExtResource( 6 )

[node name="chassis" type="Node2D" parent="tableau_container"]
position = Vector2( 1360, 528 )

[node name="right_arm" type="Node2D" parent="tableau_container"]
position = Vector2( 1248, 832 )

[node name="left_arm" type="Node2D" parent="tableau_container"]
position = Vector2( 1248, 440 )

[node name="legs" type="Node2D" parent="tableau_container"]
position = Vector2( 1352, 736 )

[node name="enemy_tableau_container" type="Node2D" parent="."]
position = Vector2( -200, -64 )

[node name="enemy_tableau" type="Sprite" parent="enemy_tableau_container"]
visible = false
modulate = Color( 0.784314, 1, 0.784314, 1 )
position = Vector2( 1536, 672 )
scale = Vector2( 1.1, 2.2 )
z_index = -1
texture = ExtResource( 6 )

[node name="chassis" type="Node2D" parent="enemy_tableau_container"]
position = Vector2( 1370, 536 )

[node name="right_arm" type="Node2D" parent="enemy_tableau_container"]
position = Vector2( 1666, 440 )

[node name="left_arm" type="Node2D" parent="enemy_tableau_container"]
position = Vector2( 1280, 440 )

[node name="legs" type="Node2D" parent="enemy_tableau_container"]
position = Vector2( 1256, 736 )

[node name="text_overlay" type="Node2D" parent="."]
position = Vector2( 962.372, 995.23 )

[node name="background" type="Sprite" parent="text_overlay"]
visible = false
modulate = Color( 0, 0, 0, 1 )
position = Vector2( 1, 52.5 )
scale = Vector2( 1, 0.124512 )
texture = ExtResource( 5 )

[node name="turn_text" type="Label" parent="text_overlay"]
visible = false
margin_left = -922.0
margin_top = -75.0
margin_right = -458.0
margin_bottom = -44.0
rect_scale = Vector2( 4, 4 )
text = "Turn Text"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="starting_tile" type="Node2D" parent="."]
visible = false
position = Vector2( 103, 105 )

[node name="debug_sprite" type="Sprite" parent="starting_tile"]
texture = ExtResource( 2 )

[node name="Sprite3" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.215686 )
position = Vector2( 1166.05, 481.952 )
scale = Vector2( 0.829339, 0.958834 )
texture = ExtResource( 17 )

[node name="Sprite4" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.215686 )
position = Vector2( 1168, 443.905 )
scale = Vector2( 0.829339, 0.958834 )
texture = ExtResource( 17 )

[node name="Sprite5" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.215686 )
position = Vector2( 1188.1, 435.905 )
scale = Vector2( 0.829339, 0.958834 )
texture = ExtResource( 17 )

[node name="sun" type="Sprite" parent="."]
position = Vector2( 960, 531.905 )
rotation = 0.0131938
scale = Vector2( 1.01937, 1.00031 )
texture = ExtResource( 16 )

[node name="hud" type="Sprite" parent="."]
visible = false
position = Vector2( 960, 557.435 )
rotation = 1.5708
scale = Vector2( 0.514501, 0.937289 )
z_index = 100
texture = ExtResource( 8 )

[node name="line" type="Sprite" parent="."]
self_modulate = Color( 0, 0, 0, 1 )
position = Vector2( 1125.5, 1434.5 )
rotation = 1.5708
scale = Vector2( 0.351268, 2.42731 )
z_index = 105
texture = ExtResource( 5 )

[node name="line2" type="Sprite" parent="."]
self_modulate = Color( 0, 0, 0, 1 )
position = Vector2( 850, -339.502 )
rotation = 1.5708
scale = Vector2( 0.343095, 2.19114 )
z_index = 500
texture = ExtResource( 5 )

[node name="Button" type="Button" parent="."]
visible = false
margin_left = 43.0
margin_top = 33.0
margin_right = 188.0
margin_bottom = 138.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Button"]
visible = false
position = Vector2( 73.4475, 52.0774 )
scale = Vector2( 1.14811, 0.805749 )
texture = ExtResource( 7 )

[node name="Label" type="Label" parent="."]
visible = false
margin_left = 43.0
margin_top = 34.0
margin_right = 139.0
margin_bottom = 105.0
rect_scale = Vector2( 1.5, 1.5 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "END TURN"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="text_cont" type="Node2D" parent="."]
position = Vector2( -16, 48 )
z_index = 150

[node name="enemy_health" type="Label" parent="text_cont"]
margin_left = 1032.0
margin_top = 120.0
margin_right = 1171.0
margin_bottom = 180.0
rect_scale = Vector2( 1.5, 1.5 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "1000"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="enemy_hunger" type="Label" parent="text_cont"]
margin_left = 1256.0
margin_top = 120.0
margin_right = 1384.0
margin_bottom = 180.0
rect_scale = Vector2( 1.5, 1.5 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "1000"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="enemy_water" type="Label" parent="text_cont"]
margin_left = 1464.0
margin_top = 120.0
margin_right = 1592.0
margin_bottom = 180.0
rect_scale = Vector2( 1.5, 1.5 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "1000"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="enemy_health_label" type="Label" parent="text_cont"]
margin_left = 1072.0
margin_top = 72.0
margin_right = 1211.0
margin_bottom = 132.0
rect_scale = Vector2( 1.5, 1.5 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "HP"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="enemy_hunger_label" type="Label" parent="text_cont"]
margin_left = 1232.0
margin_top = 72.0
margin_right = 1382.0
margin_bottom = 132.0
rect_scale = Vector2( 1.5, 1.5 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Hunger"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="enemy_water_label" type="Label" parent="text_cont"]
margin_left = 1456.0
margin_top = 72.0
margin_right = 1595.0
margin_bottom = 132.0
rect_scale = Vector2( 1.5, 1.5 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Water"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="enemy_health_max_pos" type="Position2D" parent="text_cont"]
position = Vector2( 1090, 170 )

[node name="enemy_hunger_max_pos" type="Position2D" parent="text_cont"]
position = Vector2( 1528, 168 )

[node name="enemy_hunger_pos" type="Position2D" parent="text_cont"]
position = Vector2( 1320, 168 )

[node name="player_health_max_pos" type="Position2D" parent="text_cont"]
position = Vector2( 346, 170 )

[node name="player_hunger_max_pos" type="Position2D" parent="text_cont"]
position = Vector2( 788, 172 )

[node name="player_hunger_pos" type="Position2D" parent="text_cont"]
position = Vector2( 572, 172 )

[node name="player_defense_pos" type="Position2D" parent="text_cont"]
position = Vector2( 232, 384 )

[node name="player_toughness_pos" type="Position2D" parent="text_cont"]
position = Vector2( 232, 472 )

[node name="player_health" type="Label" parent="text_cont"]
margin_left = 280.0
margin_top = 120.0
margin_right = 419.0
margin_bottom = 180.0
rect_scale = Vector2( 1.5, 1.5 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "1000"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="player_health_label" type="Label" parent="text_cont"]
margin_left = 320.0
margin_top = 72.0
margin_right = 459.0
margin_bottom = 132.0
rect_scale = Vector2( 1.5, 1.5 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "HP"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="player_hunger" type="Label" parent="text_cont"]
margin_left = 512.0
margin_top = 120.0
margin_right = 640.0
margin_bottom = 180.0
rect_scale = Vector2( 1.5, 1.5 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "1000"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="player_defense" type="Label" parent="text_cont"]
margin_left = 80.0
margin_top = 328.0
margin_right = 208.0
margin_bottom = 388.0
rect_scale = Vector2( 1.5, 1.5 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "1000"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="player_toughness" type="Label" parent="text_cont"]
margin_left = 80.0
margin_top = 416.0
margin_right = 208.0
margin_bottom = 476.0
rect_scale = Vector2( 1.5, 1.5 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "1000"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="player_hunger_label" type="Label" parent="text_cont"]
margin_left = 496.0
margin_top = 72.0
margin_right = 646.0
margin_bottom = 132.0
rect_scale = Vector2( 1.5, 1.5 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Hunger"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="player_water" type="Label" parent="text_cont"]
margin_left = 728.0
margin_top = 120.0
margin_right = 856.0
margin_bottom = 180.0
rect_scale = Vector2( 1.5, 1.5 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "1000"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="player_water_label" type="Label" parent="text_cont"]
margin_left = 712.0
margin_top = 72.0
margin_right = 840.0
margin_bottom = 132.0
rect_scale = Vector2( 1.5, 1.5 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Water"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="player_defense_sprite" type="Sprite" parent="text_cont"]
position = Vector2( 56, 368 )
scale = Vector2( 0.04, 0.04 )
texture = ExtResource( 4 )

[node name="player_defense_toughness" type="Sprite" parent="text_cont"]
position = Vector2( 56, 456 )
scale = Vector2( 0.04, 0.04 )
texture = ExtResource( 4 )

[node name="cam" type="Camera2D" parent="."]
anchor_mode = 0
current = true

[node name="ui" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="z" type="Node2D" parent="ui"]

[node name="player_health_bar" type="HBoxContainer" parent="ui/z"]
margin_left = 40.0
margin_top = 88.0
margin_right = 440.0
margin_bottom = 138.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="ui/z/player_health_bar"]

[node name="TextureProgress" type="TextureProgress" parent="ui/z/player_health_bar"]
margin_right = 400.0
margin_bottom = 50.0
max_value = 500.0
texture_under = ExtResource( 11 )
texture_progress = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="player_food_bar" type="HBoxContainer" parent="ui/z"]
margin_left = 480.0
margin_top = 88.0
margin_right = 664.0
margin_bottom = 128.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="ui/z/player_food_bar"]

[node name="TextureProgress" type="TextureProgress" parent="ui/z/player_food_bar"]
margin_right = 400.0
margin_bottom = 50.0
max_value = 500.0
texture_under = ExtResource( 14 )
texture_progress = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "sun_anim"
anims/sun_anim = SubResource( 2 )
[connection signal="mouse_entered" from="Button" to="." method="_on_end_turn_button_mouse_entered"]
[connection signal="mouse_exited" from="Button" to="." method="_on_end_turn_button_mouse_exited"]
[connection signal="pressed" from="Button" to="." method="_on_end_turn_button_pressed"]
